# A-Tracker

./: .gitlab-ci.yml  Dockerfile  README.md  appveyor.yml  iv.yaml  objetivos-0.md  partidaChess.py  pyproject.toml  tasks.py
.github/workflows/: docker.yaml  testing.yaml
Tracker/: Tablero.py  tablero.py
docs/: Chess.md  Objetivo-1.md  Objetivo-2.md  Objetivo-3.md  Objetivo-4.md  Objetivo-5.md  Objetivo-6.md  criteriosObjetivo3.md  criteriosObjetivo4.md  generalJourney.md
tests/: tablero_test.py  test_tablero.py  test_tracker.py  tracker_test.py
tracker/: partidachess.py  pieza.py  tablero.py  tipo_pieza.py
