[tool.poetry]
name = "Tracker"
version = "0.1.0"
description = "Aplicacion enfocada al aprendizaje en juegos como el ajedrez, así como la como en la detección de errores en el juego  propio o de los rivales."
authors = ["xCyal <manuvilla4@correo.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pylint = "^2.4.4"
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
