[tool.poetry]
name = "A-tracker"
version = "0.1.0"
description = "Proyecto A-Tracker de la asignatura IV"
authors = ["xCyal <manuvilla4@correo.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pytest = "^6.2.5"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
